--- a/pom.xml
+++ b/pom.xml
@@ -49,19 +49,7 @@
             <version>2.6.5</version>
         </dependency>
 
-		<!-- DataStax Java Driver -->
-        <dependency>
-            <groupId>com.datastax.cassandra</groupId>
-            <artifactId>cassandra-driver-core</artifactId>
-            <version>3.2.0</version>
-        </dependency>
-
-        <!-- Provides codecs for conversion of date/time types to CQL -->
-        <dependency>
-            <groupId>com.datastax.cassandra</groupId>
-            <artifactId>cassandra-driver-extras</artifactId>
-            <version>3.2.0</version>
-        </dependency>
+		<!-- TODO: DataStax Java Driver -->
 
     </dependencies>
 
