--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,12 @@
             <version>2.6.5</version>
         </dependency>
 
-		<!-- TODO: DataStax Java Driver -->
+        <!-- TODO: DataStax Java Driver -->
+        <dependency>
+            <groupId>com.datastax.cassandra</groupId>
+            <artifactId>cassandra-driver-core</artifactId>
+            <version>3.2.0</version>
+        </dependency>
 
     </dependencies>
 
