--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
 
-# TODO: add setting for localhost addresses 127.0.0.1 and 127.0.0.2 as the CASSANDRA_NODES property
 com.cassandraguide.services.reservation.CASSANDRA_NODES=127.0.0.1,127.0.0.2
+
+# TODO: add setting for default consistency level QUORUM
+com.cassandraguide.services.reservation.DEFAULT_CONSISTENCY_LEVEL=QUORUM
