--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
 com.cassandraguide.services.reservation.CASSANDRA_NODES=127.0.0.1,127.0.0.2
 
 com.cassandraguide.services.reservation.DEFAULT_CONSISTENCY_LEVEL=QUORUM
+
+# TODO: Add debug logging for logger "com.datastax.driver.core.Cluster"
+logging.level.com.datastax.driver.core.Cluster=DEBUG
