--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,14 @@
             <version>3.2.0</version>
         </dependency>
 
+        <!-- TODO: Add cassandra-driver-extras dependency for access to codecs -->
+        <!-- DataStax Java Driver - Codecs, etc -->
+        <dependency>
+            <groupId>com.datastax.cassandra</groupId>
+            <artifactId>cassandra-driver-extras</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
     </dependencies>
 
 	<build>
