--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
+
+# Connectivity to Cassandra
+cassandra.contactpoint.hostname=127.0.0.1
+cassandra.contactpoint.port=9042
+cassandra.localDataCenterName=datacenter1
+cassandra.keyspaceName=reservation
