initial conversion to Apollo configuration

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,8 +4,16 @@
 datastax-java-driver {
 
   basic {
+    session-keyspace = reservation
+    cloud.secure-connect-bundle = /Users/jeffreycarpenter/reservation-service/src/main/resources/secure-connect-reservation-service.zip
+    #cloud.secure-connect-bundle = classpath:secure-connect-reservation-service.zip
     request.timeout = 5 seconds
     request.consistency = LOCAL_QUORUM
   }
 
+  advanced.auth-provider {
+    class = PlainTextAuthProvider
+    username = reservation_service
+    password = reservation_service
+  }
 }
