--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,25 @@
 		<relativePath />
 	</parent>
 
+	<repositories>
+		<repository>
+			<id>datastax-releases-public-local</id>
+			<url>https://repo.datastax.com/datastax-public-releases-local/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+
 	<properties>
 		<java.version>11</java.version>
 		<swagger.version>2.9.2</swagger.version>
 		<junit-jupiter.version>5.4.2</junit-jupiter.version>
 		<junit-platform.version>1.4.2</junit-platform.version>
-		<oss-java-driver.version>4.2.0</oss-java-driver.version>
+		<oss-java-driver.version>4.2.0-cloud-01</oss-java-driver.version>
 		<testcontainers.version>1.11.3</testcontainers.version>
 
 		<version.maven.plugin.compiler>3.8.0</version.maven.plugin.compiler>
