test runs successfully, still working on test configuration to disable use of Docker container

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@
 # ----------------------------------------------------------
 spring:
   application:
-    name: Reservation Reservicess
+    name: Reservation Services
   jackson:
     serialization:
       WRITE_DATES_AS_TIMESTAMPS: false
