1. add maven far jar plugin 2. use docker multi stage to build another docker image for spring-boot app 3. adjust docker-compose to create a docker network for cassandra and spring-boot

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,16 @@
 version: '2'
+
+networks:
+  back:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.20.10.0/24
+          gateway: 172.20.10.1
+
 services:
   cassandra:
-    image: cassandra:3.11.4
+    image: cassandra:3.11.6
     ports:
       - 7000:7000
       - 7001:7001
@@ -9,6 +18,24 @@ services:
       - 9042:9042
     ulimits:
       memlock: -1
+    networks:
+      back:
+        ipv4_address: 172.20.10.11
+
+  spring_boot:
+    depends_on:
+      - cassandra
+    build: .
+    image: spring-boot-hotel-reservation:latest
+    ports:
+      - "8080:8080"
+    environment:
+      CASSANDRA_CONTACT_HOST: 172.20.10.11
+      CASSANDRA_CONTACT_PORT: 9042
+    networks:
+      back:
+        ipv4_address: 172.20.10.101
+
     # If you want to save data directories across runs
     # volumes:
     #   - ~/cassandra/:/var/lib/cassandra/data
