--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.5.RELEASE</version>
+		<version>2.2.6.RELEASE</version>
 		<relativePath />
 	</parent>
 
@@ -23,9 +23,9 @@
 		<java.version>11</java.version>
 		<swagger.version>2.9.2</swagger.version>
 		<junit-jupiter.version>5.4.2</junit-jupiter.version>
-		<junit-platform.version>1.4.2</junit-platform.version>
-		<oss-java-driver.version>4.2.0</oss-java-driver.version>
-		<testcontainers.version>1.11.3</testcontainers.version>
+		<junit-platform.version>1.7.0-M1</junit-platform.version>
+		<oss-java-driver.version>4.5.1</oss-java-driver.version>
+		<testcontainers.version>1.14.1</testcontainers.version>
 
 		<version.maven.plugin.compiler>3.8.0</version.maven.plugin.compiler>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
