--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<junit-jupiter.version>5.4.2</junit-jupiter.version>
 		<junit-platform.version>1.7.0-M1</junit-platform.version>
 		<oss-java-driver.version>4.5.1</oss-java-driver.version>
+		<kafka-client.version>2.5.0</kafka-client.version>
 		<testcontainers.version>1.14.1</testcontainers.version>
 
 		<version.maven.plugin.compiler>3.8.0</version.maven.plugin.compiler>
@@ -61,6 +62,12 @@
 			<groupId>com.datastax.oss</groupId>
 			<artifactId>java-driver-query-builder</artifactId>
 			<version>${oss-java-driver.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-clients</artifactId>
+			<version>${kafka-client.version}</version>
 		</dependency>
 
 		<dependency>
