--- a/src/test/resources/config-test.properties
+++ b/src/test/resources/config-test.properties
@@ -6,3 +6,7 @@ cassandra.contactpoint.port=9042
 cassandra.localDataCenterName=datacenter1
 cassandra.keyspaceName=reservation
 
+# Connectivity to Kafka
+kafka.bootstrap-servers=127.0.0.1:9092
+kafka.client-id=ReservationService
+kafka.topicName=reservation
