--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
 		<version.maven.plugin.compiler>3.8.0</version.maven.plugin.compiler>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<start-class>dev.cassandraguide.ReservationServiceApp</start-class>
+		<dockerfile-maven-version>1.4.13</dockerfile-maven-version>
+
 	</properties>
 
 	<dependencies>
@@ -175,6 +177,19 @@
                     <target>${java.version}</target>
 				</configuration>
             </plugin>
+
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>dockerfile-maven-plugin</artifactId>
+				<version>${dockerfile-maven-version}</version>
+				<configuration>
+					<repository>reservation-service</repository>
+					<tag>${project.version}</tag>
+					<buildArgs>
+						<JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+					</buildArgs>
+				</configuration>
+			</plugin>
         </plugins>
 	</build>
 
