--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,24 +10,22 @@ services:
       - 9042:9042
     ulimits:
       memlock: -1
+    # If you want to save data directories across runs
+    # volumes:
+    #   - ~/cassandra/:/var/lib/cassandra/data
 
   spring_boot:
     depends_on:
       - cassandra
     build: .
-    image: spring-boot-hotel-reservation:latest
+    image: reservation-service:latest
     ports:
       - "8080:8080"
     environment:
       CASSANDRA_CONTACT_HOST: cassandra
       CASSANDRA_CONTACT_PORT: 9042
 
-
-    # If you want to save data directories across runs
-    # volumes:
-    #   - ~/cassandra/:/var/lib/cassandra/data
- 
-# If you want to have cqksh
-#  docker exec -it `docker ps | grep cassandra:3.11.4 | cut -b 1-12` cqlsh
+# To run cqlsh
+#  docker-compose exec -it cassandra cqlsh
     
   
