--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,9 +14,9 @@ server:
 # DataStax Enterprise Java Driver Config
 # ----------------------------------------------------------
 cassandra:
-  contactPoint: 127.0.0.1
+  contactPoint: cassandra
   port: 9042
   keyspaceName: reservation
-  localDataCenterName: datacenter1
+  localDataCenterName: dc1
   dropSchema: false
   
